--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="app_name">RealTimeDataCollector</string>
     <string name="title_activity_main">RealTimeDataCollector</string>
-    <string name="package_name">io.ionic.starter</string>
-    <string name="custom_url_scheme">io.ionic.starter</string>
+    <string name="package_name">com.surveyapp.surveyform</string>
+    <string name="custom_url_scheme">com.surveyapp.surveyform</string>
     <string name="admob_app_id">ca-app-pub-8416006941552663~8369755045</string>
 </resources>
